# bitcoin-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
.hooks/: pre-commit
bencher/: Cargo.toml
bitcoin-rs/: Cargo.toml  cli.yml  config.rs  main.rs  rpc.rs  rpc_apis.rs  util.rs
bitcoin-rs/commands/: import.rs  start.rs
bitcoin-rs/memory/: Cargo.toml
bitcoin-rs/memory/src/: lib.rs  memory.rs
bitcoin-rs/node-manager/: Cargo.toml
bitcoin-rs/node-manager/src/: lib.rs  node_manager.rs
bitcoin-rs/src/: app_dir.rs  block_notifier.rs  build.rs  cli.yml  config.rs  logger.rs  main.rs  rpc.rs  rpc_apis.rs  util.rs
bitcoin-rs/src/commands/: import.rs  info.rs  mod.rs  rollback.rs  start.rs  stats.rs  verify.rs
bitcoin-rs/tests/: feat_recover.rs  feat_stats.rs  feat_verify.rs  node_manager.rs  p2p_sendheaders.rs  rpc_blockchain.rs  rpc_blockchaininfo.rs  rpc_control.rs  rpc_generate.rs  rpc_getmemoryinfo.rs  rpc_getnetworkinfo.rs  rpc_network.rs  rpc_stop.rs
chain/: Cargo.toml  README.md
chain/benches/: merkle_root.rs
chain/src/: block.rs  block_header.rs  indexed_block.rs  indexed_header.rs  indexed_transaction.rs  lib.rs  merkle_root.rs  read_and_hash.rs  short_transaction_id.rs  transaction.rs
crypto/: Cargo.toml
database/: Cargo.toml  README.md
database/benches/: database.rs
database/src/: adapator.rs  blockchain_db.rs  db_block.rs  db_interface.rs  ham_adapter.rs  ham_db.rs  ham_types.rs  lib.rs  overlay_db.rs
database/tests/: blockchain_db.rs  blockchaindb.rs
db/: Cargo.toml
db/benches/: database.rs
db/src/: block_chain_db.rs
db/src/kv/: cachedb.rs  db.rs  diskdb.rs  memorydb.rs  mod.rs  overlaydb.rs  transaction.rs
db/tests/: blockchaindb.rs
doc/: bips.md
hammersbald/: Cargo.toml  NOTICE  README.md
hammersbald/src/: api.rs  async_file.rs  asyncfile.rs  bitcoin_adaptor.rs  bucket.rs  cached_file.rs  cachedfile.rs  data_file.rs  datafile.rs  error.rs  format.rs  hammersbald_api.rs  lib.rs  log_file.rs  logfile.rs  mem_table.rs  memtable.rs  page.rs  paged_file.rs  pagedfile.rs  persistent.rs  pref.rs  rolled_file.rs  rolledfile.rs  single_file.rs  singlefile.rs  stats.rs  table_file.rs  tablefile.rs  transient.rs
hammersbald/tests/: api.rs
import/: Cargo.toml
keys/: Cargo.toml
keys/src/: address.rs  display.rs  error.rs  generator.rs  keypair.rs  lib.rs  private.rs  public.rs  signature.rs
logs/: Cargo.toml
message/: Cargo.toml
miner/: Cargo.toml
miner/benches/: memory_pool.rs  mod.rs
miner/src/: block_assembler.rs  block_template.rs  cpu_miner.rs  fee.rs  lib.rs  memory_pool.rs
network/: Cargo.toml
p2p/: Cargo.toml  README.md  build.rs  seeds_test.txt
p2p/src/: config.rs  lib.rs  p2p.rs  session.rs
p2p/src/io/: deadline.rs  error.rs  handshake.rs  mod.rs  read_any_message.rs  read_header.rs  read_message.rs  read_payload.rs  shared_tcp_stream.rs  sharedtcpstream.rs  write_message.rs
p2p/src/net/: accept_connection.rs  channel.rs  config.rs  connect.rs  connection.rs  connection_counter.rs  connections.rs  mod.rs  peer_context.rs  stats.rs
p2p/src/protocol/: addr.rs  mod.rs  ping.rs  sync.rs
p2p/src/util/: internet_protocol.rs  interval.rs  mod.rs  node_table.rs  peer.rs  response_queue.rs  synchronizer.rs  time.rs
pbtc/: config.rs  main.rs  rpc.rs  seednodes.rs  util.rs
portal/: Cargo.toml
primitives/: Cargo.toml
rpc/: Cargo.toml
rpc/client/: Cargo.toml  README.md
rpc/client/src/: lib.rs  rpc_client.rs
rpc/server/: Cargo.toml
rpc/server/src/: lib.rs  rpc_apis.rs  rpc_server.rs
rpc/server/src/v1/: mod.rs
rpc/server/src/v1/impls/: blockchain.rs  control.rs  generate.rs  mod.rs  network.rs
rpc/server/src/v1/traits/: control.rs  generate.rs  miner.rs  mod.rs  network.rs  raw.rs
rpc/server/src/v1/types/: address.rs  block_template.rs  blockchain_info.rs  chain_tx_stats.rs  get_block_response.rs  get_tx_out_response.rs  nodes.rs  peer.rs  script.rs
rpc/src/: lib.rs  rpc_client.rs  rpc_server.rs
rpc/src/v1/: mod.rs
rpc/src/v1/helpers/: errors.rs
rpc/src/v1/impls/: blockchain.rs  miner.rs  mod.rs  network.rs  raw.rs
rpc/src/v1/traits/: blockchain.rs  control.rs  miner.rs  mod.rs  network.rs  raw.rs
rpc/src/v1/types/: address.rs  block_template.rs  block_template_request.rs  blockchain_info.rs  bytes.rs  chain_tx_stats.rs  get_block_response.rs  get_tx_out_response.rs  get_tx_out_set_info_response.rs  hash.rs  memory_info.rs  mempool_info.rs  mod.rs  network_info.rs  nodes.rs  peer.rs  transaction.rs  uint.rs
script/: Cargo.toml
script/src/: builder.rs  error.rs  flags.rs  interpreter.rs  lib.rs  num.rs  opcode.rs  script.rs  sign.rs  stack.rs  verify.rs
serialization/: Cargo.toml
serialization_derive/: Cargo.toml
snap/: snapcraft.yaml
storage/: Cargo.toml
storage/src/: best_block.rs  block_ancestors.rs  block_chain.rs  block_height.rs  block_impls.rs  block_iterator.rs  block_meta.rs  block_origin.rs  block_provider.rs  block_ref.rs  duplex_store.rs  error.rs  lib.rs  store.rs  transaction_meta.rs  transaction_provider.rs
sync/: Cargo.toml
sync/src/: blocks_writer.rs  inbound_connection.rs  inbound_connection_factory.rs  lib.rs  local_node.rs  synchronization_chain.rs  synchronization_client.rs  synchronization_client_core.rs  synchronization_executor.rs  synchronization_manager.rs  synchronization_peers.rs  synchronization_peers_tasks.rs  synchronization_server.rs  synchronization_verifier.rs  types.rs
sync/src/utils/: average_speed_meter.rs  best_headers_chain.rs  bloom_filter.rs  compact_block_builder.rs  connection_filter.rs  fee_rate_filter.rs  hash_queue.rs  known_hash_filter.rs  memory_pool_transaction_provider.rs  message_block_headers_provider.rs  orphan_blocks_pool.rs  orphan_transactions_pool.rs  partial_merkle_tree.rs  synchronization_state.rs
test-data/: Cargo.toml
test-data/src/: block.rs  chain_builder.rs  invoke.rs  lib.rs  time.rs
tools/: deb_build.sh  doc.sh  docker_build.sh  draw_graph.sh  graph.dot  graph_ratio.diff  regtests.sh  workspace.diff
verification/: Cargo.toml
(+105 files in other folders)
