[workspace]
members = [
	"bencher",
	"bitcoin-rs",
	"chain",
	"crypto",
	"db",
	"import",
	"keys",
	"logs",
	"message",
	"miner",
	"network",
	"p2p",
	"portal",
	"primitives",
	"rpc",
	"script",
	"serialization",
	"serialization_derive",
	"storage",
	"sync",
	"verification",
]

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true
