[workspace]
members = [
	"bitcoin-rs",
	"chain",
	"crypto",
	"database",
	"db",
	"import",
	"keys",
	"logs",
	"message",
	"miner",
	"network",
	"p2p",
	"primitives",
	"rpc",
	"script",
	"serialization",
	"serialization_derive",
	"storage",
	"sync",
	"verification",
]

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true
