[workspace]
members = [
	"bitcoin-rs",
	"bitcoin-rs/memory",
	"bitcoin-rs/node-manager",
	"chain",
	"crypto",
	"database",
	"hammersbald",
	"import",
	"keys",
	"logs",
	"message",
	"miner",
	"network",
	"p2p",
	"primitives",
	"rpc",
	"script",
	"serialization",
	"serialization_derive",
	"storage",
	"sync",
	"verification",
]

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = false
panic = 'abort'

[profile.test]
debug = true
