[package]
name = "bitcoin-rs"
version = "0.1.0"
license = "GPL-3.0"
description = "Rust implementation of the Bitcoin protocol"
build = "src/build.rs"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
app_dirs = "1.2.1"
libc = "0.2"
clap = { version = "2", features = ["yaml"] }
tokio = { version = "0.2.11", features = ["rt-core", "rt-threaded", "io-util", "sync", "stream", "test-util", "macros", "signal"] }
bitcrypto = { path = "../crypto" }
message = { path = "../message" }
network = { path = "../network" }
p2p = { path = "../p2p" }
storage = { path = "../storage" }
db = { path = "../database" }
verification = { path = "../verification" }
sync = { path = "../sync" }
import = { path = "../import" }
logs = { path = "../logs" }
rpc = { path = "../rpc" }
primitives = { path = "../primitives" }
test-data = { path = "../test-data" }

[build-dependencies]
built = "0.4"

[dev-dependencies]
node-manager = { path = "node-manager" }


[[bin]]
name = "bitcoin-rs"
path = "src/main.rs"
