[package]
name = "bitcoin-rs"
version = "0.1.0"
license = "GPL-3.0"
description = "Rust implementation of the Bitcoin protocol"
build = "src/build.rs"
edition = "2018"

[dependencies]
jemallocator = "0.3"
log = "0.4"
app_dirs = "1.2.1"
libc = "0.2"
clap = { version = "2", features = ["yaml"] }
log4rs = { version = "0.12.0", features = ["background_rotation"] }
tokio = { version = "0.3.6", features = ["rt", "rt-multi-thread", "net", "time", "io-util", "sync", "stream", "test-util", "macros", "signal", "parking_lot"] }
bitcrypto = { path = "../crypto" }
message = { path = "../message" }
network = { path = "../network" }
p2p = { path = "../p2p" }
storage = { path = "../storage" }
db = { path = "../database" }
verification = { path = "../verification" }
sync = { path = "../sync" }
import = { path = "../import" }
rpc = { path = "../rpc" }
primitives = { path = "../primitives" }
memory = { path = "memory" }

[build-dependencies]
built = "0.4"

[dev-dependencies]
node-manager = { path = "node-manager" }
test-data = { path = "../test-data" }


[[bin]]
name = "bitcoin-rs"
path = "src/main.rs"
