[package]
name = "db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rocksdb = { git = "https://github.com/ethcore/rust-rocksdb" }
elastic-array = "0.11"
parking_lot = "0.10"
log = "0.4"
bit-vec = "0.6"
lru-cache = "0.1"
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
chain = { path = "../chain" }
storage = { path = "../storage" }

[dev-dependencies]
tempdir = "0.3"
test-data = { path = "../test-data" }
