[package]
name = "db"
version = "0.1.0"
edition = "2018"

[dependencies]
rocksdb = { version = "0.13", features = ["snappy"], default-features = false }
elastic-array = "0.11"
parking_lot = "0.11"
log = "0.4"
bit-vec = "0.6"
lru-cache = "0.1"
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
chain = { path = "../chain" }
storage = { path = "../storage" }

[dev-dependencies]
criterion = "0.3"
chain = { path = "../chain", features = ["test-helpers"] }
tempdir = "0.3"
test-data = { path = "../test-data" }

[[bench]]
name = "database"
harness = false
