[package]
name = "hammersbald"
version = "2.4.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
description = "Hammersbald - fast persistent store for a blockchain"
keywords = [ "blockchain", "bitcoin", "hammersbald" ]
readme = "README.md"
edition = "2018"

[lib]
name = "hammersbald"
path = "src/lib.rs"

[dependencies]
log = "0.4"
rand = "0.7"
byteorder = "1.2"
lru = "0.6.1"
bitcoin_hashes = "0.7.6"
parking_lot = "0.11"