[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
rustc-hex = "2"
lazy_static = "1.4.0"
base58 = "0.1"
secp256k1 = { version = "0.17.2", features = ["recovery", "rand"] }
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
