[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
lazy_static = "1.4.0"
base58 = "0.1"
bitcrypto = { path = "../crypto" }
secp256k1 = { version = "0.19", features = ["recovery", "rand", "endomorphism"] }
primitives = { path = "../primitives" }
