[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
base58 = "0.1"
bitcrypto = { path = "../crypto" }
secp256k1 = { version = "0.20", features = ["recovery", "rand", "rand-std"] }
primitives = { path = "../primitives" }
