[package]
name = "miner"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1.0"
# TODO use something other than heapsize (unmaintained). and what is it used for anyway?
heapsize = "0.4"
bitcrypto = { path = "../crypto" }
chain = { path = "../chain", features = ["test-helpers"] }
storage = { path = "../storage" }
db = { path = "../database" }
network = { path = "../network" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
verification = { path = "../verification" }
keys = { path = "../keys" }
script = { path = "../script" }

[dev-dependencies]
test-data = { path = "../test-data" }
criterion = "0.3"

[[bench]]
name = "memory_pool"
harness = false

[features]
test-helpers = []
