[package]
name = "p2p"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.2"
parking_lot = "0.10"
futures = "0.3"
time = "0.1"
rand = "0.4"
log = "0.4"
trust-dns-resolver = "0.19.2"
csv = "1"

primitives = { path = "../primitives" }
bitcrypto = { path = "../crypto" }
message = { path = "../message" }
serialization = { path = "../serialization" }
network = { path = "../network" }
