[package]
name = "p2p"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.3.6", features = ["rt", "net", "time", "io-util", "sync", "stream", "test-util", "macros", "parking_lot"] }
parking_lot = "0.11"
rand = "0.8"
log = "0.4"
csv = "1"

primitives = { path = "../primitives" }
bitcrypto = { path = "../crypto" }
message = { path = "../message" }
serialization = { path = "../serialization" }
network = { path = "../network" }

[dev-dependencies]
test-data = { path = "../test-data" }