[package]
name = "rpc"
version = "0.1.0"

[lib]

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "2"
jsonrpc-core = "14.2.0"
jsonrpc-derive = "14.2.0"
jsonrpc-http-server = "14.2.0"

sync = { path = "../sync" }
serialization = { path = "../serialization" }
chain = { path = "../chain", features = ["test-helpers"] }
primitives = { path = "../primitives" }
p2p = { path = "../p2p" }
network = { path = "../network" }
storage = { path = "../storage" }
db = { path = "../db" }
miner = { path = "../miner" }
verification = { path = "../verification" }
script = { path = "../script" }
keys = { path = "../keys" }

[dev-dependencies]
test-data = { path = "../test-data" }
