[package]
name = "script"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
keys = { path = "../keys" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
log = "0.4"
