[package]
name = "sync"
version = "0.1.0"
edition = "2018"

[dependencies]
parking_lot = "0.11"
log = "0.4"
futures = "0.3"
linked-hash-map = "0.5.3"
bit-vec = "0.6"
murmur3 = "0.5"
rand = "0.8"
byteorder = "1.0"

chain = { path = "../chain" }
bitcrypto = { path = "../crypto" }
storage = { path = "../storage" }
db = { path = "../database" }
keys = { path = "../keys" }
message = { path = "../message" }
miner = { path = "../miner" }
p2p = { path = "../p2p" }
primitives = { path = "../primitives" }
script = { path = "../script" }
serialization = { path = "../serialization" }
verification = { path = "../verification" }
network = { path = "../network" }

[dev-dependencies]
test-data = { path = "../test-data" }
miner = { path = "../miner", features = ["test-helpers"] }
chain = { path = "../chain", features = ["test-helpers"] }
