[package]
name = "test-data"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]
edition = "2018"

[dependencies]
chain = { path = "../chain"  }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
script = { path = "../script" }
bitcrypto = { path = "../crypto" }
