[package]
name = "rpc-server"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonrpc-core = "16.0"
jsonrpc-derive = "16.0"
jsonrpc-http-server = "16.0"
tokio = { version = "0.3", features = ["sync"] }

bitcrypto = { path = "../../crypto" }
sync = { path = "../../sync" }
serialization = { path = "../../serialization" }
chain = { path = "../../chain", features = ["test-helpers"] }
primitives = { path = "../../primitives" }
p2p = { path = "../../p2p" }
network = { path = "../../network" }
storage = { path = "../../storage" }
db = { path = "../../database" }
miner = { path = "../../miner" }
verification = { path = "../../verification" }
script = { path = "../../script" }
keys = { path = "../../keys" }
memory = { path = "../../bitcoin-rs/memory" }

[dev-dependencies]
test-data = { path = "../../test-data" }
